Added poor man's vectorized implementation. Current state is that it allocates a lot defeating the idea.